--- a/restaurant/templates/partials/_header.html
+++ b/restaurant/templates/partials/_header.html
@@ -1,6 +1,18 @@
 {% load static %}
-<header>
+<header class="text-center py-3 border-bottom">
   <img src="{% static 'img/logo.png' %}" />
+
+  <div>
+        {% if user.is_authenticated %}
+        <a class="hover-overlay shadow-1-strong rounded mt-5 d-inline-flex alert alert-dark" href="{%url 'logout' %}">
+        {{user.username}}
+        </a>
+        {%else%}
+        <a class="hover-overlay shadow-1-strong rounded mt-5 d-inline-flex alert alert-dark" href="{%url 'login' %}">
+        LogIn
+        <a>
+        {%endif%}
+  </div>
 </header>
 <nav>
   <ul>
