Removed __pycache__, added a page about API calls, added pulling static to a docker.

--- a/restaurant/templates/partials/_header.html
+++ b/restaurant/templates/partials/_header.html
@@ -21,5 +21,6 @@
     <li><a href="{% url 'menu' %}">Menu</a></li>
     <li><a href="{% url 'book' %}">Book</a></li>
     <li><a href="{% url 'reservations' %}">Reservations</a></li>
+    <li><a href="{% url 'api-docs' %}">API's</a></li>
   </ul>
 </nav>
